--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: Build Docusaurus
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
-    paths-ignore:
-    - '.github/workflows/**'
+  #push:
+  #  branches: [ main ]
+  #  paths-ignore:
+  #  - '.github/workflows/**'
 
 jobs:
   build:
